tests/testcases/invalid/semantic/22_if_condition_not_bool.ciel
// Error: if condition must be of type 'bool'
int main() {
    int x = 5;
    if (x) {  // Error: x is int, not bool
        return 1;
    }
    return 0;
}
